fix social buttons on small screens

--- a/client/assets/stylesheets/modules/social-buttons.scss
+++ b/client/assets/stylesheets/modules/social-buttons.scss
@@ -41,6 +41,7 @@
             @include flex-direction(row);
 
             a {
+                padding: 10px 0 10px 0;
                 border: none;
             }
         }
